# rock-paper-scissors-battle-royale

./: .gitignore  CMakeLists.txt  NETWORKING.md  README.md  makefile  readme_plan.md  scripts.txt  video.txt
scripts/: run_5_cli_clients.sh  run_5_gui_clients.ps1
src/: 209A3.code-workspace  chase_simulation.c  chase_simulation.h  client_gui.c  client_gui_messages.c  client_gui_network.c  client_gui_state.h  client_ncurses  client_ncurses.c  client_network.c  client_state.h  client_text.c  client_text_messages.c  common.h  game.c  game.h  main.c  makefile  protocol.c  protocol.h  server.c  server_commands.c  server_commands.h  server_state.c  server_state.h
src/client_ncurses.dSYM/Contents/: Info.plist
src/client_ncurses.dSYM/Contents/Resources/DWARF/: client_ncurses
src/client_ncurses.dSYM/Contents/Resources/Relocations/aarch64/: client_ncurses.yml
tests/: integration_runner.c  test_cli_smoke.sh  test_cli_valgrind.sh  test_runner.c
